--- a/style/nav.css
+++ b/style/nav.css
@@ -156,7 +156,7 @@ body {
 .navbar-items > li:not(:has(> a)) > div > p {
   cursor: pointer;
 }
-.navbar-items > li:has(> a) .active,
+
 .navbar-items > li > a:hover,
 .navbar-items > li > div:hover p,
 .vertical-navbar li div:hover,
@@ -165,7 +165,10 @@ body {
 .navbar-items > li:has(div):hover > div > p {
   background-color: #f5f6f7;
 }
-
+.navbar-items > li:has(> a) .active{
+  background-color:  #98CA3D;
+  color: white;
+}
 .vertical-navbar > li > div > i {
   position: absolute;
   top: 50%;
