--- a/style/nav.css
+++ b/style/nav.css
@@ -180,6 +180,8 @@ body {
   display: none;
   z-index: 5;
   text-align: center;
+  border: 1px solid rgb(247, 246, 246);
+  border-radius: 5px;
 }
 
 .vertical-navbar-items {
