--- a/style/style.css
+++ b/style/style.css
@@ -254,6 +254,7 @@
   margin: 10px auto;
   scroll-margin-top: 50px; 
   /* background-color: #4ec6de; */
+  background-color: #FCFCFD;
 }
 
 .service .service-title h1 {
