--- a/style/nav.css
+++ b/style/nav.css
@@ -212,6 +212,11 @@ body {
   display: block;
 }
 
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
   .navbar {
     padding: 5px 30px;
@@ -236,8 +241,10 @@ body {
   display: none;
   position: fixed;
   z-index: 10;
-  left: 0;
   top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -248,6 +255,8 @@ body {
 .sidebar {
   position: absolute;
   right: 0;
+  top: 0;
+  bottom: 0;
   width: 300px;
   height: 100vh;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
