--- a/style/nav.css
+++ b/style/nav.css
@@ -255,6 +255,8 @@ body {
 .sidebar {
   position: absolute;
   right: 0;
+  top: 0;
+  bottom: 0;
   width: 300px;
   height: 100vh;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
