--- a/style/style.css
+++ b/style/style.css
@@ -60,6 +60,7 @@
 .about_us{
   max-width: 1400px;
   width: 90%;
+  height: auto;
   margin: 80px auto;
   scroll-margin-top: 100px; 
   direction: rtl;
@@ -251,6 +252,7 @@
 .service {
   max-width: 1400px;
   width: 100%;
+  height: auto;
   margin: 0 auto;
   scroll-margin-top: 50px; 
   direction: rtl;
@@ -378,6 +380,7 @@
   scroll-margin-top: 110px; 
   max-width: 1400px;
   width: 90%;
+  height: auto;
   margin: 80px auto;
   direction: rtl;
 
@@ -456,6 +459,34 @@
 .company-container img{
   width: 180px;
   max-width: 100%;
+}
+
+
+.move-top{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #4ec6de;
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  display: none;
+
+}
+
+.move-top i{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 25px;
+
+}
+
+
+.move-top:hover{
+  cursor: pointer;
 }
 
 
