--- a/style/style.css
+++ b/style/style.css
@@ -474,13 +474,13 @@
 
 }
 
-.move-top i{
+.move-top span{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #fff;
-  font-size: 25px;
+  font-size: 28px;
 
 }
 
