--- a/style/package.css
+++ b/style/package.css
@@ -1,50 +1,38 @@
-
-
-
-
-.info{
+.info {
     padding: 50px 50px 0 50px;
     direction: rtl;
 }
 
-.info p{
+.info p {
     padding: 20px;
 }
 
-
-.packages{
-    width: 90%;
+.packages {
+    width: 100%;
     max-width: 1200px;
-    min-height: 700px;
-    margin: 0 auto;
-    padding: 50px;
+    margin: 50px auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    row-gap: 30px;
-    /* background-color: white; */
+    row-gap: 20px;
     border-radius: 20px;
-
 }
 
-.content-center{
+.content-center {
     max-width: 1600px;
     margin: 0 auto;
     width: 100%;
 }
 
-.package-controller{
-
+.package-controller {
     display: flex;
     justify-content: center;
     align-items: center;
-    direction:rtl;
-
-
+    direction: rtl;
 }
 
-.package-controller button{
+.package-controller button {
     /* width: 90%; */
     width: 150px;
     margin: 10px;
@@ -53,64 +41,57 @@
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    background-color: #eeeeee;;
-
-
+    background-color: #eeeeee;
 }
 
-
-.package-controller button.active{
+.package-controller button.active {
     background-color: #4ec6de;
     color: white;
 }
 
-.content_box{
+.content_box {
     width: 100%;
-
 }
 
-.content_box .content{
+.content_box .content {
     display: none;
 }
 
-.content_box .content.active{
+.content_box .content.active {
     display: block;
 }
 
-.package-detail{
+.package-detail {
     width: 100%;
-    padding: 25px;
     /* background-color: azure; */
     /* background-color: rebeccapurple; */
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: 20px 50px;
     justify-content: center;
-
-
 }
 
-.package{
+.package {
     background-color: #fff;
-    margin-top: 50px;
+    margin: 50px 10px;
     padding-top: 90px;
     width: 200px;
     height: 280px;
     border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
+        rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
     position: relative;
     cursor: pointer;
 }
 
-.package-shape{
+.package-shape {
     position: absolute;
     top: -35px;
     left: 50%;
     transform: translateX(-50%);
 }
 
-.package-shape .package-top-shape-rectangle{
+.package-shape .package-top-shape-rectangle {
     position: relative;
     display: flex;
     justify-content: center;
@@ -121,28 +102,24 @@
     background-color: #4ec6de;
 }
 
-
-.package-top-shape-data h2{
+.package-top-shape-data h2 {
     color: white;
-
 }
 
-.package-shape .package-shape-top-triangle{
+.package-shape .package-shape-top-triangle {
     position: absolute;
     bottom: 0;
     width: 0;
-	height: 0;
+    height: 0;
     left: 50%;
     bottom: -9px;
     transform: translateX(-50%);
-	border-left: 8px solid transparent;
-	border-right: 8px solid transparent;
-	border-top: 10px solid #4ec6de;
-
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 10px solid #4ec6de;
 }
 
-
-.package-bottom-shape{
+.package-bottom-shape {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -151,33 +128,39 @@
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     border: 1px solid gainsboro;
-
 }
 
-
-.package-data{
-   width: 100%;
-   padding: 0 15px;
-   /* background-color: blueviolet; */
+.package-data {
+    width: 100%;
+    padding: 0 15px;
+    /* background-color: blueviolet; */
 }
 
-.package-data-money, .package-data-duration, .package-data-connectionType, .package-data-speed{
+.package-data-money,
+.package-data-duration,
+.package-data-connectionType,
+.package-data-speed {
     direction: rtl;
     display: flex;
     align-items: center;
     margin: 8px 0;
 }
 
-.package-data-money i, .package-data-duration i, .package-data-connectionType i, .package-data-speed i{
+.package-data-money i,
+.package-data-duration i,
+.package-data-connectionType i,
+.package-data-speed i {
     font-size: 18px;
     color: #000000;
-
 }
 
-.package-data-money p, .package-data-duration p, .package-data-connectionType p, .package-data-speed p{
+.package-data-money p,
+.package-data-duration p,
+.package-data-connectionType p,
+.package-data-speed p {
     margin-right: 12px;
 }
 
-.package-data-speed p{
+.package-data-speed p {
     direction: ltr;
 }
