--- a/style/style.css
+++ b/style/style.css
@@ -471,6 +471,7 @@
   height: 50px;
   border-radius: 10px;
   display: none;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 
 }
 
