--- a/style/package.css
+++ b/style/package.css
@@ -85,13 +85,15 @@
 }
 
 .package-detail {
-    width: 100%;
+    max-width: 950px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     column-gap: 20px;
+    margin: 0 auto;
 }
+
 
 .package {
     background-color: #fff;
@@ -259,4 +261,10 @@
     border-color: #4ec6de transparent transparent transparent;
     border-radius: 50%/10px 10px 0 0;
     rotate: -5deg;
+  }
+
+
+  .district-info{
+    direction: rtl;
+    padding: 50px;
   }
